# SignalSlot

./: .gitignore  README.md  Signal.hpp
test/: CMakeLists.txt  test.cpp
